# Logistics-Optimization-For-TiranaFly

./: .gitignore  AGENTS.md  MainMap.py  README.md  init_db.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  text.txt
.cursor/: mcp.json
_archive/: text.txt
ai/: __init__.py  demand_forecasting.py  evaluation.py  explainability.py  feature_store.py  inference_service.py  model_registry.py  optimization_agent.py  predictive_maintenance.py  reinforcement_dispatch.py  route_prediction.py  training_pipeline.py
api/: app.py
backend/: Dockerfile  docker-compose.yml  main.py  requirements.txt
fleet/: __init__.py  battery_manager.py  battery_optimizer.py  benchmark.py  degradation_model.py  demand_forecaster.py  dispatch_engine.py  drone_scheduler.py  fleet_allocator.py  models.py  queue_model.py  queue_models.py  resilience.py  utilization_analyzer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
gis/: administrative_units.py  boundary_loader.py  coordinate_utils.py  geometry.py  h3_grid.py  h3_tessellation.py  population_mapper.py  spatial_index.py  spatial_validation.py
graph/: __init__.py  graph_builder.py  graph_pruner.py  graph_serializer.py  models.py  network_metrics.py  route_optimizer.py  shortest_path.py
integration/: benchmark_runner.py  system_orchestrator.py
optimization/: __init__.py  benchmark.py  coverage_optimizer.py  depot_selector.py  facility_location.py  models.py  p_center.py  p_median.py  pcenter.py  pmedian.py  sensitivity.py  set_cover.py  weighted_kmeans.py
(+104 files in other folders)
