# filename: pyproject.toml
[tool.poetry]
name = "tiranafly"
version = "1.0.0"
description = "Production Drone Logistics Optimization Platform for Tirana Municipality"
authors = ["Lead Architect <engineering@tiranafly.internal>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.1"
networkx = "^3.2.1"
h3 = "^3.7.7"
shapely = "^2.0.3"
geopandas = "^0.14.3"
psycopg2-binary = "^2.9.9"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"